# rosu-pp-newer

./: Cargo.toml  README.md  text.txt
src/: lib.rs
src/osu_delta/: angle_correction.rs  array_vec.rs  difficulty_object.rs  hit_probabilities.rs  interpolations.rs  math_util.rs  mod.rs  movement.rs  osu_object.rs  pp.rs  roots.rs  stars.rs
src/osu_sotarks/: beatmap.rs  mod.rs  pp.rs
src/osu_xexxar/: beatmap.rs  control_point_iter.rs  curve.rs  difficulty_object.rs  math_util.rs  mod.rs  osu_object.rs  pp.rs  skill.rs  skill_kind.rs  slider_state.rs  stars.rs
