[package]
name = "rosu-pp-newer"
version = "0.1.0"
authors = ["MaxOhn <ohn.m@hotmail.de>"]
edition = "2018"

[dependencies.rosu-pp]
path = "../rosu-pp"
# git = "https://github.com/MaxOhn/rosu-pp"
# branch = "next"
features = ["async_tokio"]

[dev-dependencies.tokio]
version = "1.6"
features = ["full"]
